--- a/responz/index.html
+++ b/responz/index.html
@@ -9,10 +9,36 @@
   <body>
     <header>
         <h1>Codebery Light</h1>
-        <tagline class="blog">A Simple Blog Theme</tagline>
+        <p class="blog">A Simple Blog Theme</p>
         <a href="#">Like</a>
         <a href="#">Follow</a>
     </header>
-    <main></main>
+    <main>
+        <article>
+            <h2>A Cool Article About Something Edgy</h2>
+            <img class="image-01" src="http://i.imgur.com/rGWSW9i.jpg" alt="happy">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet metus at velit sodales blandit eu nec nibh.
+            Etiam ac facilisis dui. Quisque lorem sapien, facilisis non purus eu, hendrerit feugiat neque. Nam malesuada et lectus
+            vel pellentesque.</p>
+            <a href="#">Read more</a>
+        </article>
+        <article>
+            <h2>A Strong Opinion On a Thing That Just Happened</h2>
+            <img src="image-02" alt="?">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet metus at velit sodales blandit eu nec
+                nibh. Etiam ac facilisis dui. Quisque lorem sapien, facilisis non purus eu, hendrerit feugiat neque. Nam
+                malesuada et lectus vel pellentesque.</p>
+            <a href="#">Read more</a>
+        </article>
+        <article>
+            <h2>A Listicle For You and Your Boyfriend</h2>
+            <img class="image-03" src="http://i.imgur.com/JS1RcVU.jpg" alt="love">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sit amet metus at velit sodales blandit eu nec nibh.
+                Etiam ac facilisis dui. Quisque lorem sapien, facilisis non purus eu, hendrerit feugiat neque. Nam malesuada et
+                lectus vel pellentesque.</p>
+            <a href="#">Read more</a>
+        </article>
+    </main>
+    <a href="#" target="_blank">Load more stories ...</a>
   </body>
 </html>
