--- a/responz/index.html
+++ b/responz/index.html
@@ -43,6 +43,6 @@
             <a href="#">Read more</a>
         </article>
     </main>
-    <a class="load" href="#" target="_blank">Load more stories ...</a>
+    <a class="load" href="#">Load more stories ...</a>
   </body>
 </html>
